added comment and logout functionality and change navbar

--- a/gallery/src/components/common/Navbar/Navbar.css
+++ b/gallery/src/components/common/Navbar/Navbar.css
@@ -7,3 +7,18 @@
     align-items: center;
 
 }
+.options{
+    position: absolute;
+    top : 60px;
+    right: 55px;
+    background-color: white;
+    visibility: hidden;
+    z-index: 10;
+    
+}
+
+.active{
+    opacity: 1;
+    visibility: visible;
+    top: 60px;
+}
