--- a/gallery/src/components/Form/Form.css
+++ b/gallery/src/components/Form/Form.css
@@ -1,4 +1,44 @@
-.form-wrapper{
+.post-form-wrapper{
     width: 100%;
     margin: 20px auto;
+    background-color: white;
+    padding: 15px;
+    border-radius: 12px;
 }
+
+.post-form-description input {
+    padding: 8px 15px;
+    border-radius: 30px;
+    background-color: rgb(219, 217, 217);
+    font-size: 12px;
+    border: none;
+    outline: none;
+    width: 100%;
+    color : black;
+    font-weight: 600;
+}
+
+.post-form-input{
+    width: 100%;
+    padding-left: 10px;
+}
+
+    
+
+input[type=file]{
+    display: none;
+}
+
+.clear-icon{
+    display: none;
+}
+.active{
+    display:  inline-block;
+}
+
+.image-upload:hover{
+    color : blue
+}
+/* div{
+    border: 2px solid black;
+} */
