--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 .App {
   width: 100vw;
+  height: 100vh;
+  min-width: fit-content
 }
 
 .App-logo {
@@ -37,6 +39,9 @@
   }
 }
 
+.flex{
+  display: flex;
+}
 .center {
   display: flex;
   justify-content :center;
@@ -60,4 +65,8 @@
 }
 .full-height{
   height: 100%;
+}
+
+.text-center{
+  text-align: center;
 }
