--- a/client/src/Component/Navbar/navbar.css
+++ b/client/src/Component/Navbar/navbar.css
@@ -45,10 +45,26 @@
 }
 
 .search-input{
-          width: 20rem;
+          width: 18rem;
           border: none;
           outline: none;
           padding: 4px;
           border-radius: 10px;
           background-color: rgb(224, 228, 232)
+}
+
+.right-navbar{
+      height: 100vh;
+      width: 50%;
+      z-index: 9;
+}
+.nav-options{
+  font-size : 18px;
+  padding: 10px 0px;
+  color : rgb(74, 124, 153)
+}
+.menu-icon{
+  position: absolute;
+  right : 10px;
+  top : 10px;
 }
