--- a/client/src/Component/ProfileRightsideContainer/profilerightbar.css
+++ b/client/src/Component/ProfileRightsideContainer/profilerightbar.css
@@ -15,13 +15,13 @@
           overflow-y: scroll;
 }
 
-.rightcontainer2{
+/* .rightcontainer2{
           width: 20pc;
           height: 60vh;
           background-color: white;
           margin-top: 20px;
           border-radius: 15px;
-}
+} */
 
 .adsimg{
           width: 130px;
