--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,44 +1,10 @@
 .App {
   width: 100vw;
-  height: 100vh;
-  min-width: fit-content
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  height: fit-content;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  background-color: rgb(235, 238, 242);
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .flex{
   display: flex;
 }
@@ -65,6 +31,10 @@
 }
 .full-height{
   height: 100%;
+}
+
+.screenH{
+  height: 100vh;
 }
 
 .text-center{
