--- a/client/src/Component/ContentPostContainer/contentpost.css
+++ b/client/src/Component/ContentPostContainer/contentpost.css
@@ -33,6 +33,21 @@
           
 }
 
+.imagebackup{
+          width:40px;
+          height: 40px;
+          border-radius: 50%;
+          margin-left: 10px;
+          font-size: 18px;
+          font-weight: 800;
+          background-color: cornflowerblue;
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-transform: uppercase;
+}
+
 .icons{
           width: 24px;
           height: 24px;
