--- a/client/src/Component/RightsideContainer/rightbar.css
+++ b/client/src/Component/RightsideContainer/rightbar.css
@@ -20,16 +20,17 @@
 }
 
 .rightcontainer{
-          width: 20pc;
-          height: 30vh;
+          width: 100%;
+          height: 60vh;
           background-color: white;
           margin-top: 20px;
           border-radius: 15px;
 }
 
 .rightcontainer2{
-          width: 20pc;
+          width: 100%;
           height: 60vh;
+          min-height: fit-content;
           background-color: white;
           margin-top: 20px;
           border-radius: 15px;
@@ -61,4 +62,10 @@
           width: 20px;
           height: 20px
           
+}
+
+.suggestname{
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
 }
